Complete LicenseFixes.java and License.java